fix(layout): remove horizontal scrollbar in Chrome

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
   /* for the footer to stay at the bottom of the site */
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
